# kanna

./: .gitignore  README.md  package.json
scripts/: build-desktop-sidecar.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/client/app/: App.tsx  ChatPage.tsx  KannaSidebar.tsx  SettingsPage.test.tsx  SettingsPage.tsx  chatFocusPolicy.test.ts  chatFocusPolicy.ts  socket.test.ts  socket.ts  useKannaState.ts
src/client/components/: LocalDev.tsx  NewProjectModal.tsx
src/client/components/chat-ui/: ChatInput.test.ts  ChatInput.tsx  ChatPreferenceControls.test.tsx  ChatPreferenceControls.tsx  RightSidebar.tsx  TerminalPane.tsx  skill-picker.test.ts  skill-picker.ts
src/client/components/messages/: ImageLightbox.tsx  ResultMessage.tsx  UserMessage.tsx  shared.test.tsx  shared.tsx
src/client/lib/: formatters.test.ts  hermesSshCommand.test.ts  hermesSshCommand.ts  imageUploads.test.ts  imageUploads.ts  parseTranscript.ts  runtime.ts
src/client/stores/: chatPreferencesStore.test.ts  chatPreferencesStore.ts
src/server/: agent.ts  cli-runtime.test.ts  cli-runtime.ts  cli.ts  codex-app-server-protocol.ts  codex-app-server.ts  desktop.ts  events.ts  file-tree-manager.test.ts  file-tree-manager.ts  hermes-acp-protocol.ts  hermes-ssh-manager.ts  hermes-ssh-settings.ts  media-store.ts  provider-catalog.ts  server.ts  skills.test.ts  skills.ts  terminal-manager.test.ts  terminal-manager.ts  update-manager.test.ts  update-manager.ts  ws-router.test.ts  ws-router.ts
src/shared/: protocol.ts  types.ts
(+1 files in other folders)
